fixed content overlapping

--- a/Project2/src/app/app.component.css
+++ b/Project2/src/app/app.component.css
@@ -9,3 +9,7 @@ body {
     height: 100vh;
     min-height: 100vh;
 }
+
+.outletCont {
+    margin-left: 245px;
+}
